--- a/styles/new_quizz.css
+++ b/styles/new_quizz.css
@@ -28,18 +28,23 @@
   margin-top: 27px;
 }
 
-.new-quizz input{
+.new-quizz input,
+.new-quizz textarea{
   border-radius: 5px;
   border: 1px solid #d1d1d1;
   display: block;
   width: 100%;
   height: 46px;
   padding-left: 23px;
-}
-
-.new-quizz input{
+  padding-right: 23px;
   margin-top: 9px;
   margin-bottom: 9px;
+}
+
+.new-quizz textarea{
+  resize: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 
 .padding-20{
@@ -121,6 +126,11 @@
   }
 
   .new-quizz input{
+    padding-left: 14px;
+  }
+
+  .new-quizz textarea{
+    height: 177px;
     padding-left: 14px;
   }
 
