--- a/styles/new_quizz.css
+++ b/styles/new_quizz.css
@@ -47,10 +47,6 @@
   padding-bottom: 13px;
 }
 
-.padding-20{
-  padding: 20px;
-}
-
 .new-quizz .question-background,
 .new-quizz .question-image:not(:last-child){
   margin-bottom: 28px;
@@ -80,12 +76,26 @@
   cursor: pointer;
 }
 
+.new-quizz .back-to-home{
+  color: #818181;
+  background-color: #fafafa;
+  margin-top: 9px;
+}
+
+.new-quizz button:last-child{
+  margin-bottom: 20px;
+}
+
 .new-quizz header{
   display: flex;
   justify-content: space-between;
   cursor: pointer;
   align-items: center;
   padding: 20px;
+}
+
+.new-quizz :not(.collapsed) header{
+  padding-bottom: 0;
 }
 
 .new-quizz .collapsible{
@@ -105,9 +115,45 @@
   display: none;
 }
 
-.new-quizz .back-to-home{
-  color: #818181;
-  background-color: white;
+.new-quizz figure{
+  position: relative;
+  width: calc(100vw - 40px);
+  margin-left: 20px;
+  margin-right: 20px;
+  max-width: 500px;
+  height: 266px;
+  margin-top: 46px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.new-quizz figure::after{
+  display: block;
+  content: ' ';
+  background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9));
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.new-quizz img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.new-quizz figcaption{
+  position: absolute;
+  bottom: 23px;
+  left: 23px;
+  color: white;
+  font-size: 23px;
+  line-height: 27px;
+  z-index: 30;
 }
 
 @media (max-width: 1100px){
@@ -134,9 +180,26 @@
     padding-left: 14px;
   }
 
+  .new-quizz figure {
+    margin-top: 29px;
+  }
+
   .new-quizz button {
     font-size: 18px;
     line-height: 21px;
     margin-top: 29px;
   }
+
+  .new-quizz .go-to-quizz,
+  .new-quizz .back-to-home{
+    width: 220px;
+  }
+
+  .new-quizz .go-to-quizz{
+    margin-top: 24px;
+  }
+}
+
+.padding-20{
+  padding: 20px;
 }
