--- a/styles/home.css
+++ b/styles/home.css
@@ -4,12 +4,13 @@
 
 .created-quizzes {
     margin: 77px 0px;
-    width: 1051px;
+    max-width: 1051px;
+    width: 100%;
     height: 181px;
 }
 
 .empty {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     border: 1px dashed #d5d5d5;
     border-radius: 5px;
@@ -94,4 +95,13 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
+}
+
+@media(max-width:975px) {
+    .quizzes-list {
+        width: 1066px;
+        height: 181px;
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
