--- a/styles/home.css
+++ b/styles/home.css
@@ -10,7 +10,7 @@
 }
 
 .empty {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     border: 1px dashed #d5d5d5;
     border-radius: 5px;
@@ -58,7 +58,7 @@
 
 .quizzes-list {
     width: 1066px;
-    height: 181px;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -97,11 +97,4 @@
     border-radius: 5px;
 }
 
-@media(max-width:975px) {
-    .quizzes-list {
-        width: 1066px;
-        height: 181px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
+@media(max-width:975px) {}
