--- a/styles/home.css
+++ b/styles/home.css
@@ -6,12 +6,12 @@
     margin: 77px 0px;
     max-width: 1051px;
     width: 100%;
-    height: 181px;
+    height: auto;
 }
 
 .empty {
     width: 100%;
-    height: 100%;
+    height: 181px;
     border: 1px dashed #d5d5d5;
     border-radius: 5px;
     display: flex;
@@ -98,6 +98,7 @@
     position: absolute;
     left: 18px;
     bottom: 12px;
+    z-index: 20;
 }
 
 .quizz-thumb img {
@@ -109,5 +110,14 @@
 @media(max-width:1100px) {
     .quizzes-list {
         flex-direction: column;
+    }
+    .quizz-thumb {
+        margin-right: 0px;
+    }
+    .created-quizzes {
+        margin: 31px 0px;
+    }
+    .section-title {
+        justify-content: space-between;
     }
 }
