--- a/styles/new_quizz.css
+++ b/styles/new_quizz.css
@@ -112,7 +112,7 @@
   padding: 0 20px 20px 20px;
 }
 
-/* collpase animation */
+/* collapse animation */
 
 .new-quizz .collapsible{
   overflow: hidden;
@@ -132,7 +132,7 @@
   padding-bottom: 0;
 }
 
-/* collpase animation */
+/* collapse animation */
 
 .new-quizz .svg{
   display: none;
