--- a/styles/play_quizz.css
+++ b/styles/play_quizz.css
@@ -65,6 +65,8 @@
     cursor: pointer;
 }
 
+.answer p {}
+
 .answer-section {
     display: flex;
     column-gap: 20px;
@@ -72,18 +74,19 @@
     flex-wrap: wrap;
 }
 
-.img-wrapper{
-  position: relative;
-  width: 100%;
-  padding-bottom: 53%;
+.img-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 53%;
 }
 
-.img-wrapper img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.img-wrapper img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
 
 /* daqui pra baixo feito por vitor */
 
