--- a/styles/play_quizz.css
+++ b/styles/play_quizz.css
@@ -52,6 +52,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    padding: 20px;
 }
 
 .question p {
@@ -93,7 +94,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 
