Change specificity of play_quizz selectors so they dont target new_quizz

--- a/styles/new_quizz.css
+++ b/styles/new_quizz.css
@@ -78,7 +78,7 @@
 
 .new-quizz .back-to-home {
     color: #818181;
-    background-color: #efefef;
+    background-color: #fafafa;
     margin-top: 9px;
     margin-bottom: 20px;
     /* margin bottom applied so the button doesn't hug the end of the page */
