loading screen applied

--- a/styles/home.css
+++ b/styles/home.css
@@ -32,7 +32,7 @@
 
 .empty button {
     margin-top: 30px;
-    background: #fff;
+    background: #fafafa;
     border-radius: 50px;
     border: 1px dashed #EC362D;
     color: #EC362D;
