pulling new implementations on edit and delete

--- a/styles/home.css
+++ b/styles/home.css
@@ -70,7 +70,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .quizzes-list li {
