--- a/styles/main.css
+++ b/styles/main.css
@@ -53,3 +53,21 @@ h1 {
     font-size: 25px;
     color: #ec362d;
 }
+
+@media(max-width:1100px) {
+    .loading {
+        margin-top: 125px;
+    }
+}
+
+@media(max-width:600px) {
+    .loading {
+        margin-top: 100px
+    }
+}
+
+@media(max-width:320px) {
+    .loading {
+        margin-top: 60px;
+    }
+}
